...
            child: Column(
              children: [
                const Spacer(),
                const AppLogo(),
                const Spacer(),
                SportlyButton.solid(
                  key: const Key('sign-in-button'),
                  label: LocaleKeys.sign_in_page_button_label.tr(),
                  assetPath: AppAssets.googleIcon,
                  onTap: cubit.signInWithGoogle,
                ),
                const Gap(AppDimens.md),
              ],
...
