...
            style: AppTypo.bodyMedium.copyWith(
              color: AppColors.secondary,
            ),
          ),
          const Spacer(),
          SportlyButton.solid(
            key: const Key('sign-out-button'),
            label: LocaleKeys.sign_out_button_label.tr(),
            onTap: cubit.signOut,
          ),
        ],
      ),
    );
...
